--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,25 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-black=22.12.0=pypi_0
-bzip2=1.0.8=he774522_0
-ca-certificates=2022.12.7=h5b45459_0
-certifi=2022.12.7=pyhd8ed1ab_0
-click=8.1.3=pypi_0
-colorama=0.4.6=pypi_0
-libffi=3.4.2=hd77b12b_6
-mypy-extensions=0.4.3=pypi_0
-openssl=1.1.1s=h2bbff1b_0
-pathspec=0.10.3=pypi_0
-pip=22.2.2=py310haa95532_0
-platformdirs=2.6.0=pypi_0
-pydantic=1.10.2=py310h2bbff1b_0
-pyfiglet=0.8.post1=py_0
-python=3.10.8=h966fe2a_1
-setuptools=65.5.0=py310haa95532_0
-sqlite=3.40.0=h2bbff1b_0
-termcolor=2.1.1=pyhd8ed1ab_0
-tinydb=4.7.0=pyhd8ed1ab_0
-tk=8.6.12=h2bbff1b_0
-tomli=2.0.1=pypi_0
-typing-extensions=4.3.0=py310haa95532_0
-typing_extensions=4.3.0=py310haa95532_0
-tzdata=2022f=h04d1e81_0
-vc=14.2=h21ff451_1
-vs2015_runtime=14.27.29016=h5e58377_2
-wheel=0.37.1=pyhd3eb1b0_0
-wincertstore=0.2=py310haa95532_2
-xz=5.2.6=h8cc25b3_0
-zlib=1.2.13=h8cc25b3_0
+name: p4p4
+channels:
+  - conda-forge
+  - anaconda
+  - defaults
+dependencies:
+  - bzip2=1.0.8
+  - ca-certificates=2022.4.26
+  - certifi=2022.6.15
+  - colorama=0.4.4
+  - libffi=3.4.2
+  - openssl=1.1.1s
+  - pip=22.3.1
+  - python=3.10.9
+  - setuptools=65.6.3
+  - sqlite=3.40.1
+  - tinydb=4.7.1
+  - tk=8.6.12
+  - tzdata=2022g
+  - vc=14.2
+  - vs2015_runtime=14.27.29016
+  - wheel=0.37.1
+  - wincertstore=0.2
+  - xz=5.2.10
+  - zlib=1.2.13
